# ms-rewards-automator

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  CONTEXT.md  LICENSE  MEMORY.md  MERGE_PLAN.md  PR_DESCRIPTION.md  README.md  README_INDEX.md  cli.py  config.example.yaml  config.yaml  e2e-test-requirements.md  environment.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  test_ws.py  theme_state.json  user_rules.md  web_server.py  ws_test_results.txt  对话压缩后总结.md
.claude/: settings.local.json
.github/workflows/: ci_tests.yml  e2e-full.yml  e2e-smoke.yml  pr_check.yml  run_daily.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-兼容边界冻结与调用图基线/: 01-CONTEXT.md  01-PLAN.md
.planning/phases/01-基础设施与数据设置/: 01-02-SUMMARY.md
.planning/quick/260321-enz-wsl-wslg-e2e-research-full/: 260321-enz-SUMMARY.md
.trae/: blocked_reason.md  current_task.md  test_report.md
.trae/agents/: dev-agent.md  docs-agent.md  test-agent.md
.trae/archive/multi-agent/: README.md
.trae/data/: pr9_full_report.md
.trae/documents/: 多智能体协作框架审查报告.md
.trae/prompts/: dev-agent.md  docs-agent.md  master-agent.md  master.md  test-agent.md
.trae/rules/: project_rules.md
.trae/skills/acceptance-workflow/: SKILL.md
.trae/skills/ai-reviewer-guide/: SKILL.md
.trae/skills/dev-execution/: SKILL.md
.trae/skills/docs-execution/: SKILL.md
.trae/skills/e2e-acceptance/: SKILL.md
.trae/skills/fetch-reviews/: SKILL.md
.trae/skills/master-agent/: SKILL.md
.trae/skills/master-execution/: SKILL.md
.trae/skills/mcp-acceptance/: SKILL.md
.trae/skills/pr-review/: SKILL.md
.trae/skills/request-reviews/: SKILL.md
.trae/skills/resolve-review-comment/: SKILL.md
.trae/skills/review-workflow/: SKILL.md
.trae/skills/test-execution/: SKILL.md
docs/: BRANCH_GUIDE.md  CI_DEVELOPMENT_SUMMARY.md  FRONTEND_ACCEPTANCE.md  README.md  TAURI_ARCHITECTURE.md  WEB_FRONTEND_GUIDE.md  WSL_AUTH_SETUP.md  ci-dashboard.html  fix_login_progress.md  task_system.md  theme_management_progress.md
docs/development/: 登录系统开发总结.md
docs/guides/: TROUBLESHOOTING.md  USAGE_GUIDE.md  用户指南.md
docs/plans/: 参数调度器整改计划.md
docs/plans/archive/: update_development_plan.md  (+2 more)
docs/reference/: ARCHITECTURE_ISSUES.md  BRANCH_GUIDE.md  CONFIG.md  MCP_WORKFLOW.md  SCHEDULER.md  WORKFLOW.md  审查评论处理工作流指南.md  评论处理系统说明.md
docs/reports/: CLEANUP_ANALYSIS.md  CLEANUP_ANALYSIS_REVISED.md  CODE_BLOAT_ANALYSIS.md  CODE_REUSE_AUDIT.md  E2E-Reporting-Guide.md  技术参考.md  问题排查报告.md  项目优化报告.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/achieved/: Config.tsx  History.tsx  Logs.tsx
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
planning/: README.md
planning/1-plans/: PLAN.md
planning/2-reference/: API完整文档.md  TS项目分析.md  架构优化分析.md
planning/4-archive/: API验证报告.md  REWARDS_V2_ADAPTATION.md
review/: __init__.py  resolver.py
scripts/: build_backend.py  diagnose_earn_page.py  test_task_recognition.py  verify_frontend.py
src/: __init__.py  cli.py
src/account/: __init__.py  manager.py  points_detector.py
src/api/: __init__.py  app.py  dashboard_client.py  models.py  routes.py  websocket.py
src/browser/: __init__.py  anti_ban_module.py  anti_focus_scripts.py  element_detector.py  page_utils.py  popup_handler.py  simulator.py  state_manager.py
src/constants/: __init__.py  urls.py
src/diagnosis/: __init__.py  engine.py  inspector.py  reporter.py  rotation.py  screenshot.py
src/infrastructure/: __init__.py  app_config.py  config_manager.py  config_types.py  config_usage_example.py  config_validator.py  container.py  error_handler.py  health_monitor.py  log_rotation.py  logger.py  models.py  ms_rewards_app.py  notificator.py  preflight.py  protocols.py  scheduler.py  self_diagnosis.py  state_monitor.py  system_initializer.py  task_coordinator.py
src/login/: __init__.py  edge_popup_handler.py  human_behavior_simulator.py  login_detector.py  login_state_machine.py  state_handler.py
src/review/: comment_manager.py  graphql_client.py  models.py  parsers.py  resolver.py
src/search/: __init__.py  bing_api_client.py  query_engine.py  search_engine.py  search_term_generator.py
src/tasks/: __init__.py  task_base.py  task_manager.py  task_parser.py
src/ui/: __init__.py  bing_theme_manager.py  cookie_handler.py  real_time_status.py  simple_theme.py  tab_manager.py
tests/: conftest.py  test_p0_integration.py
tests/autonomous/: autonomous_test_runner.py  diagnostic_engine.py  integrated_test_runner.py  page_inspector.py  reporter.py  run_autonomous_tests.py  screenshot_manager.py  smart_scenarios.py
tests/e2e/: README.md  conftest.py
tests/fixtures/: conftest.py  mock_accounts.py  mock_dashboards.py
tests/integration/: test_query_engine_integration.py
tests/unit/: test_beforeunload_fix.py  test_bing_theme_manager.py  test_bing_theme_persistence.py  test_config_manager.py  test_config_manager_properties.py  test_config_validator.py  test_dashboard_client.py  test_element_detector.py  test_fixtures_verification.py  test_health_monitor.py  test_logger_properties.py  test_login_state_machine.py  test_login_state_machine_runtime.py  test_manage_reviews_cli.py  test_online_query_sources.py  test_preflight_auth.py  test_query_cache.py  test_query_engine_core.py  test_query_sources.py  test_review_context.py  test_review_parsers.py  test_review_resolver.py  test_scheduler_flow.py  test_search_human_behavior.py  test_search_result_verification.py  test_simple_theme.py  test_task_manager.py
tools/: _common.py  analyze_html.py  check_environment.py  cleanup_artifacts.py  dashboard.py  diagnose.py  diagnose_earn_page.py  manage_reviews.py  run_tests.py  session_helpers.py  test_task_recognition.py  verify_api_endpoints.py  verify_comments.py
(+149 files in other folders)
