[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewards-core"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.49.0",
    "playwright-stealth>=1.0.6",
    "pyyaml>=6.0.1",
    "aiohttp>=3.11.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "psutil>=6.1.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.5.0",
    "pytest-benchmark>=5.0.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "hypothesis>=6.125.0",
    "faker>=35.0.0",
]
viz = [
    "streamlit>=1.41.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    # 注意：test 和 viz 依赖请通过 pip install -e .[test,viz] 单独安装
    # 避免循环依赖引用
]

[project.scripts]
rscore = "cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.isort]
known-first-party = ["src", "infrastructure", "browser", "login", "search", "account", "tasks", "ui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "real: marks tests that require real browser (deselected by default)",
    "slow: marks tests as slow",
]
addopts = "-v --tb=short -m 'not real'"
