[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewards-core"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.49.0",
    "playwright-stealth~=1.0.6",
    "pyyaml>=6.0.1",
    "aiohttp>=3.11.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "psutil>=6.1.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
    "tinydb>=4.8.0",
    "filelock>=3.15.0",
    "rich>=13.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.5.0",
    "pytest-benchmark>=5.0.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.125.0",
    "faker>=35.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.5.0",
    "pytest-benchmark>=5.0.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.125.0",
    "faker>=35.0.0",
]
viz = [
    "streamlit>=1.41.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
]

[project.scripts]
rscore = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.isort]
known-first-party = ["src", "infrastructure", "browser", "login", "search", "account", "tasks", "ui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = "src"
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
norecursedirs = [".git", ".hypothesis", "__pycache__", "*.egg-info", "tests/autonomous"]
markers = [
    "unit: Unit tests (fast, isolated component tests)",
    "integration: Integration tests (medium speed, multiple components)",
    "e2e: End-to-end tests (slow, full workflow tests)",
    "property: Property-based tests using hypothesis",
    "performance: Performance and benchmark tests",
    "reliability: Reliability and error recovery tests",
    "security: Security and anti-detection tests",
    "slow: Slow tests (skip in quick test runs)",
    "real: Real browser tests (requires credentials, skipped by default)",
]
addopts = "-v --tb=short --strict-markers -m 'not real'"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"
